allow brand image at xs size

--- a/assets/stylesheets/site.css
+++ b/assets/stylesheets/site.css
@@ -237,3 +237,9 @@ body {
 .paging li.previous {
   float: left;
 }
+/*
+.img-responsive-center-block {
+    .img-responsive;
+    .center-block;
+}*/
+
