--- a/assets/stylesheets/site.css
+++ b/assets/stylesheets/site.css
@@ -7960,3 +7960,23 @@ body {
     padding-top: 0;
   }
 }
+@media (min-width: 480px) {
+  body {
+    padding-top: 60px;
+  }
+}
+@media (min-width: 768px) {
+  body {
+    padding-top: 100px;
+  }
+}
+@media (min-width: 992px) {
+  body {
+    padding-top: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+    padding-top: 60px;
+  }
+}
